--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {padding: 5px 20px;}
 <TABLE WIDTH=525 BORDER=0 CELLPADDING=2 CELLSPACING=2>
 <tr>
  <td>
-  <a href="electric.jpg"><img vspace=5 src="thinker.gif" width=150 height=151
+  <a href="CT.jpeg"><img vspace=5 src="thinker.gif" width=150 height=151
     alt="At Electric Peak"></a> 
  </td>
  <td>
