--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@ body {padding: 5px 20px;}
 <TABLE WIDTH=525 BORDER=0 CELLPADDING=2 CELLSPACING=2>
 <tr>
  <td>
-  <a href="CT.jpeg"><img vspace=5 src="thinker.gif" width=150 height=151
-    alt="At Electric Peak"></a> 
+  <a href="images/CT.jpeg"><img vspace=5 src="thinker.gif" width=150 height=151
+    alt="CT"></a> 
  </td>
  <td>
-  <font size="+3"><b>Jacques Distler</b></font><br>
-  <font size="+2"><b><i>Professor of Physics </i></b></font>
+  <font size="+3"><b>T. CHENGAPPA</b></font><br>
+  <font size="+2"><b><i>Senior Technical Superintendent </i></b></font>
   <hr>
-  <i>Physics Department, University of Texas, Austin, Texas 78712</i> <p>
+  <i>Physics Department, Indian Institute of Technology Hyderabad</i> <p>
   <ul>
    <li>Office: RLM 9.218<a href="name/"></a>
    <li>Voice: (512) 471-2950 ::  Fax: (512) 471-4888
