--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body {padding: 5px 20px;}
 #content {max-width: 50em; position:relative; margin:auto;}
 </style>
 <LINK REL="SHORTCUT ICON" HREF="/favicon.ico">
-<title>CT-Personal Website</title>
+<title>CT</title>
 </head>
 
 <body>
