--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@ body {padding: 5px 20px;}
 <TABLE WIDTH=525 BORDER=0 CELLPADDING=2 CELLSPACING=2>
 <tr>
  <td>
-  <a href="images/CT.jpeg"><img vspace=5 src="thinker.gif" width=150 height=151
-    alt="CT"></a> 
+  <a href="CT.jpeg">
+  <img src="CT.jpeg" width="150" height="151" alt="CT">
+</a>
  </td>
  <td>
   <font size="+3"><b>T. CHENGAPPA</b></font><br>
