--- a/index.html
+++ b/index.html
@@ -1,134 +1,48 @@
-
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"
-       "http://www.w3.org/TR/REC-html40/loose.dtd"> 
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta name="google-site-verification" content="Q_RJMRjs9r6xbVzaxviFnRDL_4UdKvlfKEEfJoLr6-I" />
-<style type="text/css">
-body {padding: 5px 20px;}
-#content {max-width: 50em; position:relative; margin:auto;}
-</style>
-<LINK REL="SHORTCUT ICON" HREF="/favicon.ico">
-<title>CT</title>
+  <meta charset="UTF-8">
+  <meta name="google-site-verification" content="Q_RJMRjs9r6xbVzaxviFnRDL_4UdKvlfKEEfJoLr6-I">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CT</title>
+  <link rel="shortcut icon" href="/favicon.ico">
+  <style>
+    body {
+      padding: 5px 20px;
+      font-family: Arial, sans-serif;
+    }
+    #content {
+      max-width: 50em;
+      margin: auto;
+    }
+  </style>
 </head>
 
 <body>
-<div id="content">
-<TABLE WIDTH=525 BORDER=0 CELLPADDING=2 CELLSPACING=2>
-<tr>
- <td>
-   <img src="CT.jpeg" width="150" height="151" alt="CT">
-</a>
- </td>
- <td>
-  <font size="+3"><b>T. CHENGAPPA</b></font><br>
-  <font size="+2"><b><i>Senior Technical Superintendent </i></b></font>
-  <hr>
-  <i>Physics Department, Indian Institute of Technology Hyderabad</i> <p>
-  <ul>
-   <li>Office: RLM 9.218<a href="name/"></a>
-   <li>Voice: (512) 471-2950 ::  Fax: (512) 471-4888
-   <li>Email: <a href="mailto:distler@golem.ph.utexas.edu">
-    <tt>distler@golem.ph.utexas.edu</tt></a>
-   <li>PGP <a href="distler.asc">public key</a>
-  </ul>
- </td>
-</tr>
-</TABLE>
-
-
-<p>
-Hello
-<strong>unknown@103.232.241.182</strong>.
-So nice of you to stop by.<a href="name/"></a>
-</p>
-
-<p>
-I'm a member of the <a href="http://zippy.ph.utexas.edu/index.html">
-Theory Group</a> here at UT. I've been at UT since September 1994. Before
-coming here, I was an Assistant Professor in the theory group at
-<a href="http://puhep1.princeton.edu/">Princeton</a>.
-</p>
-
-<p>
-My research interests are in string theory, quantum field theory and 
-mathematical physics. If you want to learn more about what I do, you
-might want to look at my 
-<a
-href="http://inspirehep.net/search?p=fin+a+distler%2Cj">
-publications</a>.
-</p>
-
-<p>
-These are exciting times to be a theorist. It is fair to say that we really don't yet know what string theory is about, but we are learning.
-</p>
-
-<h2>Useful stuff . . .</h2>
-<p>
-I've written, or am the maintainer of several pieces of open-source software. These projects can be
-found in my <a href="http://golem.ph.utexas.edu/~distler/code/">Source Code Repository</a>. 
-<a href="http://golem.ph.utexas.edu/wiki/instiki/show/HomePage">Instiki</a> and <a href="http://golem.ph.utexas.edu/forum/">Heterotic Beast</a>
-are, respectively, wiki and forum software geared to the needs of physicists and mathematicians. In particular, they provide LaTeX-like
-support for mathematical equations, via <a href="http://golem.ph.utexas.edu/~distler/blog/itex2MMLcommands.html">itex2MML</a>.
-I've also written my own <a href="TeXstuff/utarticle.cls">article class</a> for 
-LaTeX2e because the existing defaults are so unspeakably ugly. As a companion
-to this, I've written a <a
-href="http://arxiv.org/hypertex/">HyperTeX</a>-aware BibTeX <a
-href="code/utphys/">style file</a>. You can grab references in BibTeX
-format from <a href="http://inspirehep.net/">inSPIRE</a>
-and use them in your paper with essentially no retyping. And, in the height
-of coolness, e-print references automatically become clickable hyperlinks to
-the paper at the <a href="http://arXiv.org"><tt>arXiv.org</tt></a>
-e-print archives.
-</p>
-
-<p>
-For many years, Golem was a NeXTStep machine. It was a lovely operating system,
-but it had more than its fair share of <a href="progs/index.html">security
-holes</a>. In mid-2001, Golem migrated to a G4 running MacOSX, a much more 
-modern operating system. <a href="http://golem.ph.utexas.edu/~distler/blog/archives/000497.html">Golem III</a> was a
-burly dual processor G5, which died a spectacular death, due to a CPU coolant leak.
-<a href="http://golem.ph.utexas.edu/~distler/blog/archives/002211.html">Golem IV</a> was a more demure 27" iMac.
-<a href="https://golem.ph.utexas.edu/~distler/blog/archives/002763.html">Golem V</a> is a Mac Mini, housed at the UT Data Center.
-</p> 
-
-<p>
-Classic MacOS things that seemed useful once upon a time include this
-<a href="MacStuff/EudoraNicknameIAD.html"> Internet Address Detector</a>
-and the venerable Macintosh version of the Los Alamos
-<a href="MacStuff/uufiles.hqx">uufiles</a> utility.
-</p>
-
-<h2>Life beyond physics . . . </h2>
-<p>
-<a href="http://www.austinlinks.com/">Austin</a> is a 
-really cool town. It has an impressive 
-<a href="http://www.austinlinks.com/Arts/">Arts
-scene</a>, great 
-<a
-href="http://www.austinchronicle.com/guides/restaurant/">
-restaurants</a> and an amazing number of 
-<a href="http://www.batcon.org/discover/congress.html">bats</a>
-under the Congress Avenue Bridge.
-My wife Suzanne and I are enjoying living here a lot.
-</p>
-
-<p>
-Here's a page with some recollections of the
-<a href="shoah/">Holocaust</a>.
-</p>
-<p>
-Finally, if your insomnia is really incurable, you can try reading my
-<a href="blog/">weblog</a>.
-</p>
-<br>
-<BLOCKQUOTE><i>"Good Heavens!" he thought to himself, "surely I can 
-never have meant to spend the whole of my life as a 
-mathematician?"</i><br>
---"The Man Without Qualities", Robert Musil
-</BLOCKQUOTE>
-
-</div>
+  <div id="content">
+    <table width="525" cellpadding="2" cellspacing="2">
+      <tr>
+        <td>
+          <!-- ✅ Corrected image and link -->
+          <a href="images/CT.jpeg" target="_blank">
+            <img src="images/CT.jpeg" width="150" height="151" alt="CT" style="margin:5px;">
+          </a>
+        </td>
+        <td>
+          <h1>T. CHENGAPPA</h1>
+          <h2><i>Senior Technical Superintendent</i></h2>
+          <hr>
+          <p><i>Physics Department, Indian Institute of Technology Hyderabad</i></p>
+          <ul>
+            <li>Office: RLM 9.218</li>
+            <li>Voice: (512) 471-2950 :: Fax: (512) 471-4888</li>
+            <li>Email: <a href="mailto:distler@golem.ph.utexas.edu">distler@golem.ph.utexas.edu</a></li>
+            <li>PGP <a href="distler.asc">public key</a></li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+  </div>
 </body>
 </html>
 
