--- a/index.html
+++ b/index.html
@@ -6,43 +6,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CT</title>
   <link rel="shortcut icon" href="/favicon.ico">
+
   <style>
     body {
       padding: 5px 20px;
-      font-family: Arial, sans-serif;
+      font-family: "Segoe UI", Arial, sans-serif;
+      font-size: 12pt;
+      line-height: 1.6;
+      color: #111;
     }
     #content {
       max-width: 50em;
       margin: auto;
     }
-  </style>
-</head>
-
-<body>
-  <div id="content">
-    <table width="525" cellpadding="2" cellspacing="2">
-      <tr>
-        <td>
-          <!-- ✅ Corrected image and link -->
-          <a href="images/CT.jpeg" target="_blank">
-            <img src="images/CT.jpeg" width="150" height="151" alt="CT" style="margin:5px;">
-          </a>
-        </td>
-        <td>
-          <h1>T. CHENGAPPA</h1>
-          <h2><i>Senior Technical Superintendent</i></h2>
-          <hr>
-          <p><i>Physics Department, Indian Institute of Technology Hyderabad</i></p>
-          <ul>
-            <li>Office: RLM 9.218</li>
-            <li>Voice: (512) 471-2950 :: Fax: (512) 471-4888</li>
-            <li>Email: <a href="mailto:distler@golem.ph.utexas.edu">distler@golem.ph.utexas.edu</a></li>
-            <li>PGP <a href="distler.asc">public key</a></li>
-          </ul>
-        </td>
-      </tr>
-    </table>
-  </div>
-</body>
-</html>
-
+    table {
+      width: 525px;
+      border-collapse: collapse;
+    }
+    img {
+      margin: 5px;
+      border-radius: 6px;
+    }
+    h1 {
+      font-size: 20pt;
+      margin-bottom: 5px;
+    }
+    h2 {
+      font-size: 14pt;
+      font-style: italic;
+      margin-top: 0;
+      margin-bottom: 5px;
+    }
+    a {
+      color: #0056b3;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    hr {
+      border: none;
+      border-top: 1p
