--- a/index.html
+++ b/index.html
@@ -46,4 +46,62 @@
     }
     hr {
       border: none;
-      border-top: 1p
+      border-top: 1px solid #ccc;
+    }
+    ul {
+      margin-top: 5px;
+    }
+    blockquote {
+      font-style: italic;
+      color: #444;
+      border-left: 3px solid #aaa;
+      padding-left: 10px;
+      margin-top: 20px;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="content">
+    <table cellpadding="2" cellspacing="2">
+      <tr>
+        <td>
+          <!-- ✅ Corrected image and working link -->
+          <a href="images/CT.jpeg" target="_blank">
+            <img src="images/CT.jpeg" width="150" height="151" alt="CT">
+          </a>
+        </td>
+        <td>
+          <h1>T. CHENGAPPA</h1>
+          <h2>Senior Technical Superintendent</h2>
+          <hr>
+          <p><i>Physics Department, Indian Institute of Technology Hyderabad</i></p>
+          <ul>
+            <li>Office: RLM 9.218</li>
+            <li>Voice: (512) 471-2950 &nbsp;&nbsp;::&nbsp;&nbsp; Fax: (512) 471-4888</li>
+            <li>Email: <a href="mailto:distler@golem.ph.utexas.edu">distler@golem.ph.utexas.edu</a></li>
+            <li>PGP <a href="distler.asc">public key</a></li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+
+    <p>Hello <strong>unknown@103.232.241.182</strong>. So nice of you to stop by.</p>
+
+    <p>I'm a member of the <a href="http://zippy.ph.utexas.edu/index.html">Theory Group</a> here at UT.
+    I've been at UT since September 1994. Before coming here, I was an Assistant Professor in the theory group at
+    <a href="http://puhep1.princeton.edu/">Princeton</a>.</p>
+
+    <p>My research interests are in string theory, quantum field theory, and mathematical physics. 
+    If you want to learn more about what I do, you might want to look at my 
+    <a href="http://inspirehep.net/search?p=fin+a+distler%2Cj">publications</a>.</p>
+
+    <p>These are exciting times to be a theorist. It is fair to say that we really don't yet know what string theory is about, but we are learning.</p>
+
+    <blockquote>
+      "Good Heavens!" he thought to himself, "surely I can never have meant to spend the whole of my life as a mathematician?"<br>
+      — <i>The Man Without Qualities</i>, Robert Musil
+    </blockquote>
+  </div>
+</body>
+</html>
