--- a/index.html
+++ b/index.html
@@ -77,20 +77,16 @@
           <hr>
           <p><i>Physics Department, Indian Institute of Technology Hyderabad</i></p>
           <ul>
-            <li>Office: RLM 9.218</li>
-            <li>Voice: (512) 471-2950 &nbsp;&nbsp;::&nbsp;&nbsp; Fax: (512) 471-4888</li>
-            <li>Email: <a href="mailto:distler@golem.ph.utexas.edu">distler@golem.ph.utexas.edu</a></li>
-            <li>PGP <a href="distler.asc">public key</a></li>
-          </ul>
+            <li>Office: 108, AD3 Physics Department</li>
+                        <li>Email: <a href="mailto:chengappa.thumisi@phy.iith.ac.in">chengappa.thumisi@phy.iith.ac.in</a></li>
+                     </ul>
         </td>
       </tr>
     </table>
 
-    <p>Hello <strong>unknown@103.232.241.182</strong>. So nice of you to stop by.</p>
-
-    <p>I'm a member of the <a href="http://zippy.ph.utexas.edu/index.html">Theory Group</a> here at UT.
-    I've been at UT since September 1994. Before coming here, I was an Assistant Professor in the theory group at
-    <a href="http://puhep1.princeton.edu/">Princeton</a>.</p>
+    
+    <p>I'm a technical Staff member of the <a href="https://physics.iith.ac.in/">Physics Department</a> here at IIT Hyderabad.
+    I've been at IITH since September July 2008. </p>
 
     <p>My research interests are in string theory, quantum field theory, and mathematical physics. 
     If you want to learn more about what I do, you might want to look at my 
