--- a/index.html
+++ b/index.html
@@ -86,18 +86,9 @@
 
     
     <p>I'm a technical Staff member of the <a href="https://physics.iith.ac.in/">Physics Department</a> here at IIT Hyderabad.
-    I've been at IITH since September July 2008. </p>
+    I've been at IITH since  July 2008. </p>
 
-    <p>My research interests are in string theory, quantum field theory, and mathematical physics. 
-    If you want to learn more about what I do, you might want to look at my 
-    <a href="http://inspirehep.net/search?p=fin+a+distler%2Cj">publications</a>.</p>
-
-    <p>These are exciting times to be a theorist. It is fair to say that we really don't yet know what string theory is about, but we are learning.</p>
-
-    <blockquote>
-      "Good Heavens!" he thought to himself, "surely I can never have meant to spend the whole of my life as a mathematician?"<br>
-      — <i>The Man Without Qualities</i>, Robert Musil
-    </blockquote>
+  
   </div>
 </body>
 </html>
