--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </table>
 
     
-    <p>I'm a technical Staff member of the <a href="https://physics.iith.ac.in/">Physics Department</a> here at IIT Hyderabad.
+    <p>I'm a technical Staff member of the <a href="https://physics.iith.ac.in/">Physics Department</a>  at IIT Hyderabad.
     I've been at IITH since  July 2008. </p>
 
   
