--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <h1>T. CHENGAPPA</h1>
           <h2>Senior Technical Superintendent</h2>
           <hr>
-          <p>Physics Department, Indian Institute of Technology Hyderabad</p>
+          <p>Physics Department, I I T Hyderabad</p>
           <ul>
             <li>Office: 108, AD3 Physics Department</li>
                         <li>Email: <a href="mailto:chengappa.thumisi@phy.iith.ac.in">chengappa.thumisi@phy.iith.ac.in</a></li>
