--- a/index.html
+++ b/index.html
@@ -86,7 +86,12 @@
 
     
     <p>I'm a technical Staff member of the <a href="https://physics.iith.ac.in/">Physics Department</a>  at IIT Hyderabad.
-    I've been at IITH since  July 2008. </p>
+     </p>
+     <p>-------------------------------------------------------------------------------------
+     </p>
+    <p>My Blog on Quantum technologies</p>
+    <p>-------------------------------------------------------------------------------------
+     </p>
 
   
   </div>
