--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
      </p>
      <p>-------------------------------------------------------------------------------------
      </p>
-    <p>My Blog on Quantum technologies</p>
+    <p><center>My Blog on Quantum technologies</center></p>
     <p>-------------------------------------------------------------------------------------
      </p>
 
