--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
     
     <p>I'm a technical Staff member of the <a href="https://physics.iith.ac.in/">Physics Department</a>  at IIT Hyderabad.
      </p>   
+    <h2>Technical expertize</h2>
+    <p>Multimodal Scanning probe Microscope<a href="https://physics.iith.ac.in/">Atomic Force Microscope</a>  at IIT Hyderabad.
+     </p>
   </div>
 </body>
 </html>
