--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
     <p>I'm a technical Staff member of the <a href="https://physics.iith.ac.in/">Physics Department</a>  at IIT Hyderabad.
      </p>   
     <h2>Technical expertize</h2>
-    <p>Multimodal Scanning probe Microscope <a href="https://www.parksystems.com/en/products/research-afm/small-sample-afm/nx10/">Atomic Force Microscope</a>  at IIT Hyderabad.
+    <p>Multimodal Scanning probe Microscope <a href="https://www.parksystems.com/en/products/research-afm/small-sample-afm/nx10/">Atomic Force Microscope</a>  
+     </p>
+    <p>Ultra High Sensitive MOKE Magnetometer <a href="https://www.parksystems.com/en/products/research-afm/small-sample-afm/nx10/">NanoMOKE</a>  
      </p>
   </div>
 </body>
