--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h2>Technical expertize</h2>
     <p>Multimodal Scanning probe Microscope <a href="https://www.parksystems.com/en/products/research-afm/small-sample-afm/nx10/">Atomic Force Microscope</a>  
      </p>
-    <p>Ultra High Sensitive MOKE Magnetometer <a href="https://www.parksystems.com/en/products/research-afm/small-sample-afm/nx10/">NanoMOKE</a>  
+    <p>Ultra High Sensitive MOKE Magnetometer <a href="https://www.durhammagnetooptics.com/?product=nanomoke3/">NanoMOKE</a>  
      </p>
   </div>
 </body>
