--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
      </p>
     <p>Ultra High Sensitive MOKE Magnetometer <a href="https://www.durhammagnetooptics.com/?product=nanomoke3/">NanoMOKE</a>  
      </p>
+    <p>Zeta 3D Profilometer <a href="https://www.azom.com/materials-video-details.aspx?VidID=547">NanoMOKE</a>  
+     </p>
   </div>
 </body>
 </html>
