--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
     h2 {
       font-size: 14pt;
-      font-style: italic;
+      font-style: bold;
       margin-top: 0;
       margin-bottom: 5px;
     }
