--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
     <p>I'm a technical Staff member of the <a href="https://physics.iith.ac.in/">Physics Department</a>  at IIT Hyderabad.
      </p>   
     <h2>Technical expertize</h2>
-    <p>Multimodal Scanning probe Microscope <a href="https://www.parksystems.com/en/products/research-afm/small-sample-afm/nx10/">Atomic Force Microscope</a>  
+    <p>Multimodal Scanning probe Microscope   
      </p>
-    <p>Ultra High Sensitive MOKE Magnetometer <a href="https://www.durhammagnetooptics.com/?product=nanomoke3/">NanoMOKE</a>  
+    <p>Ultra High Sensitive MOKE Magnetometer   
      </p>
-    <p>Zeta 3D Profilometer <a href="https://www.azom.com/materials-video-details.aspx?VidID=547">Profilometer </a>  
+    <p>Zeta 3D Profilometer   
      </p>
   </div>
 </body>
