--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
   <ul id="bookList">
     <!-- ==== PASTE YOUR BOOKS BELOW (one line each) ==== -->
     <li><a href="https://drive.google.com/file/d/1GOmBKgxdCaLIxcLVaSfB98njVeKx0bmj/view?usp=sharing">Ayn Rand-The Fountainhead</a></li>
-    <li><a href=" https://github.com/linsa-io/books">Github books by Linsa</a></li>
+    <li><a href=" https://github.com/linsa-io/books"> Linsa Books</a></li>
+    <li><a href="   https://github.com/FatoomRe/Tech-Books">FatoomRe books </a></li>
+    
+  
   
     <!-- ==== ADD MORE LINES HERE ==== -->
   </ul>
