--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
     <!-- ==== PASTE YOUR BOOKS BELOW (one line each) ==== -->
     <li><a href="https://drive.google.com/file/d/1GOmBKgxdCaLIxcLVaSfB98njVeKx0bmj/view?usp=sharing">Ayn Rand-The Fountainhead</a></li>
     <li><a href=" https://github.com/linsa-io/books"> Linsa Books</a></li>
-    <li><a href="   https://github.com/FatoomRe/Tech-Books">FatoomRe books </a></li>
+    <li><a href=" https://github.com/FatoomRe/Tech-Books">FatoomRe books </a></li>
+     <li><a href="https://github.com/HarshVadaliya/tech-books-librarys">HarshVadaliya books </a></li>
+    
     
   
   
