--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <H2>Education</H2> 
 
 <UL>
-<LI> M.Sc. (Physics),Boston Univerity </a>, 
-<LI>  B.Tech,  Physics, Indian Institute of Technology Bombay </a>
+<LI> M.Sc. (Physics),Sri Venkateswara University Tirupati, Andhra Pradesh </a>, 
+<LI>  B.Sc. (M.P.C), Sri Venkateswara University Tirupati, Andhra Pradesh </a>
 </UL>
 
 
