--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
 <LI>  B.Sc. (M.P.C), Sri Venkateswara University Tirupati, Andhra Pradesh </a>
 </UL>
 
+<H2>Useful Links</H2> 
+<LI>  <a href="https://functions.wolfram.com/">Mathematical Functions</a> 
+ <LI>  <a href=" https://scienceworld.wolfram.com/physics//">Physics World</a>
 
+ 
+<UL>
+<LI> M.Sc. (Physics),Sri Venkateswara University Tirupati, Andhra Pradesh </a>, 
+<LI>  B.Sc. (M.P.C), Sri Venkateswara University Tirupati, Andhra Pradesh </a>
+</UL>
 </BODY>
 </HTML>
 
