--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!-- The page heading: Fill in your name -->
 <H1></H1>
-<LI>  <a href="https://samuract.github.io/">T.CHENGAPPA</a> 
+<p>  <a href="https://samuract.github.io/">T.CHENGAPPA</p> 
 </CENTER>
 <HR>
 <STRONG>Senior Technical Superintendent </STRONG> <BR> 
