--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 10px;
             background-color: #f4f4f9;
             color: #333;
-            line-height: 1.6;
+            line-height: 1.4;
         }
         .header {
             background: linear-gradient(135deg, #1e3c72, #2a5298);
             color: white;
-            padding: 30px;
+            padding: 20px;
             text-align: center;
             border-radius: 10px;
-            margin-bottom: 30px;
+            margin-bottom: 15px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
         .header h1 {
-            margin: 0;
-            font-size: 2.5em;
+            margin: 0 0 5px 0;
+            font-size: 2.2em;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
         .header p {
-            margin: 5px 0;
-            font-size: 1.1em;
+            margin: 2px 0;
+            font-size: 1em;
         }
         .header a {
             color: #ffd700;
@@ -40,8 +40,8 @@
         }
         .section {
             background: white;
-            margin-bottom: 20px;
-            padding: 20px;
+            margin-bottom: 15px;
+            padding: 15px;
             border-radius: 8px;
             box-shadow: 0 2px 6px rgba(0,0,0,0.05);
         }
@@ -60,17 +60,19 @@
         .section h2 {
             color: #495057;
             border-bottom: 2px solid #dee2e6;
-            padding-bottom: 10px;
-            margin-top: 0;
+            padding-bottom: 5px;
+            margin: 0 0 10px 0;
         }
         ul {
             list-style-type: none;
             padding-left: 0;
+            margin: 0;
         }
         li {
-            padding: 8px 0;
+            padding: 4px 0;
             position: relative;
-            padding-left: 25px;
+            padding-left: 20px;
+            margin: 0;
         }
         li:before {
             content: "▶";
@@ -90,7 +92,7 @@
             border: none;
             height: 2px;
             background: linear-gradient(to right, transparent, #dee2e6, transparent);
-            margin: 20px 0;
+            margin: 10px 0;
         }
     </style>
 </head>
@@ -106,21 +108,18 @@
         <p><strong>Tel. No.: +91-40-2301-8647</strong></p>
         <p><strong>Email: </strong><a href="mailto:shntn05@gmail.com">chengappa.thumisi@phy.iith.ac.in</a></p>
     </div>
-
     <div class="section awards">
         <h2>Awards and Recognitions</h2>
         <ul>
             <li>Awarded scholarship by Basic Research Education and Development Society (BREAD), Hyderabad</li>
         </ul>
     </div>
-
     <div class="section employment">
         <h2>Employment</h2>
         <ul>
             <li>Senior Technical Superintendent <a href="http://www.iith.ac.in/">IIT Hyderabad</a> (2025-present)</li>
         </ul>
     </div>
-
     <div class="section education">
         <h2>Education</h2>
         <ul>
@@ -128,7 +127,6 @@
             <li>B.Sc. (M.P.C), Sri Venkateswara University, Tirupati, Andhra Pradesh</li>
         </ul>
     </div>
-
     <div class="section links">
         <h2>Useful Links</h2>
         <ul>
