--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 </head>
 <body>
     <h1>T. CHENGAPPA</h1>
-    <p><a href="https://samuract.github.io/">Personal Website</a></p>
     <hr>
-    <p><strong>Senior Technical Superintendent</strong></p>
-    <p><strong>IIT Hyderabad</strong></p>
-    <p><strong>Kandi, Telangana 502285</strong></p>
-    <p><strong>India</strong></p>
-    <p><strong>Tel. No.: +91-40-2301-8647</strong></p>
-    <p><strong>Email: </strong><a href="mailto:shntn05@gmail.com">chengappa.thumisi@phy.iith.ac.in</a></p>
+    <p><strong>Senior Technical Superintendent</strong></p><br>
+    <p><strong>IIT Hyderabad</strong></p><br>
+    <p><strong>Kandi, Telangana 502285</strong></p><br>
+    <p><strong>India</strong></p><br>
+    <p><strong>Tel. No.: +91-40-2301-8647</strong></p><br>
+    <p><strong>Email: </strong><a href="mailto:chengappa.thumisi@phy.iith.ac.in">chengappa.thumisi@phy.iith.ac.in</a></p>
 
     <h2>Awards and Recognitions</h2>
     <ul>
