--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body { 
             line-height: 1.2; 
             margin: 10px; 
-            font-family: ,segeo UI, sans-serif;
+            font-family:segeo UI, sans-serif;
         }
         p { 
             margin: 0.2em 0; 
