--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         <li><a href="https://functions.wolfram.com/">Mathematical Functions</a></li>
         <li><a href="https://scienceworld.wolfram.com/physics/">Physics World</a></li>
         <li><a href="https://ocw.mit.edu/">MIT Courses</a></li>
+        <li><a href="https://www.imatheq.com/imatheq/com/imatheq/math-equation-editor.html">Equation Editor</a></li>
+        
         
     </ul>
 </body>
