--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <h1>T. CHENGAPPA</h1>
     <hr>
     <p><strong>Senior Technical Superintendent</strong></p>
+    <p><strong>Department of Physics</strong></p>
     <p><strong>IIT Hyderabad</strong></p>
     <p><strong>Kandi, Telangana 502285</strong></p>
     <p><strong>India</strong></p>
