--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <h2>Awards and Recognitions</h2>
     <ul>
-        <li>Awarded scholarship by Basic Research Education and Development Society (BREAD), Hyderabad</li>
+        <li>Awarded scholarship by Basic Research Education and Development Society (BREAD), Hyderabad from 2005-2008</li>
     </ul>
     
     <h2>Employment</h2>
