--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <li><a href="   https://crookedtimber.org/">Crooked Timberr</a></li>
         <li><a href="   https://algassert.com/quirk">Quantum circuit simulator</a></li>
 <li><a href="   https://quantumflytrap.com/virtual-lab/">Virtual Quantum Experiments</a></li>
-          
+ <li><a href="   https://vanisource.org/wiki/Main_Page/">A.C.Prabhupada Guruji</a></li>         
  
 
        
