--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 <body>
     <h1>T. CHENGAPPA</h1>
     <hr>
-    <p><strong>Senior Technical Superintendent</strong></p>
-    <p><strong>Department of Physics</strong></p>
-    <p><strong>IIT Hyderabad</strong></p>
-    <p><strong>Kandi, Telangana 502285</strong></p>
-    <p><strong>India</strong></p>
-    <p><strong>Tel. No.: +91-40-2301-8647</strong></p>
+    <p>Senior Technical Superintendent</p>
+    <p>Department of Physics</p>
+    <p>IIT Hyderabad</p>
+    <p>Kandi, Telangana 502285</p>
+    <p>India</p>
+    <p>Tel. No.: +91-40-2301-8647</p>
     <p><strong>Email: </strong><a href="mailto:chengappa.thumisi@phy.iith.ac.in">chengappa.thumisi@phy.iith.ac.in</a></p>
     
     <h2>Awards and Recognitions</h2>
