--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
     <p>Tel. No.: +91-40-2301-8647</p>
     <p><strong>Email: </strong><a href="mailto:chengappa.thumisi@phy.iith.ac.in">chengappa.thumisi@phy.iith.ac.in</a></p>
     
-    <h2>Awards and Recognitions</h2>
+    <h2> Research Equipment</h2>
     <ul>
-        <li>Awarded scholarship by Basic Research Education and Development Society (BREAD), Hyderabad from 2005-2008</li>
+        <li>Multimodal Scanning probe Microscope</li>
+        <li>Ultra High Sensitive MOKE Magnetometer</li>
+        <li>Zeta 3D Profilometer</li>
     </ul>
     
     <h2>Employment</h2>
