--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>Tel. No.: +91-40-2301-8647</p>
     <p><strong>Email: </strong><a href="mailto:chengappa.thumisi@phy.iith.ac.in">chengappa.thumisi@phy.iith.ac.in</a></p>
     
-    <h2> Research Equipment</h2>
+    <h2> Research Laboratories:</h2>
     <ul>
         <li>Multimodal Scanning probe Microscope</li>
         <li>Ultra High Sensitive MOKE Magnetometer</li>
