--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     
     <h2>Useful Links</h2>
     <ul>
+
+        <li><a href="https://www.physicsclassroom.com/">Physics Classroom</a></li>
         <li><a href="https://functions.wolfram.com/">Mathematical Functions</a></li>
         <li><a href="https://scienceworld.wolfram.com/physics/">Physics World</a></li>
         <li><a href="https://ocw.mit.edu/">MIT Courses</a></li>
