--- a/index.html
+++ b/index.html
@@ -27,15 +27,7 @@
             margin: 0.5em 0;
         }
     </style>
-</head>
-    <a href="https://s05.flagcounter.com/more/pTvk"><img src="https://s05.flagcounter.com/count/pTvk/bg=FFFFFF/txt=000000/border=CCCCCC/columns=6/maxflags=36/viewers=0/labels=0/" alt="free counters" border="0"></a>
-
-<script>
-if (window.location.href.indexOf("circuit/#") > 0) {
-   var ix = window.location.href.indexOf("circuit/#");
-   window.location.assign(window.location.href.slice(0, ix) + "circuit/circuitjs.html?cct=" + window.location.href.slice(ix+9));
-}
-</script>
+<head>
 <body>
     <h1>T. CHENGAPPA</h1>
     <hr>
