--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     <ul>
 
         <li><a href="https://www.physicsclassroom.com/">Physics Classroom</a></li>
+        <li><a href="https://phet.colorado.edu/">PhET Simulations</a></li>
+        
         <li><a href="https://functions.wolfram.com/">Mathematical Functions</a></li>
         <li><a href="https://scienceworld.wolfram.com/physics/">Physics World</a></li>
         <li><a href="https://ocw.mit.edu/">MIT Courses</a></li>
