--- a/index.html
+++ b/index.html
@@ -6,40 +6,108 @@
     <title>T. Chengappa - Senior Technical Superintendent, IIT Hyderabad</title>
     <style>
         body {
-            line-height: 1.2;
-            margin: 10px;
-            font-family: Segoe UI, sans-serif;
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
+            line-height: 1.6;
+            margin: 0 auto;
+            max-width: 800px;
+            padding: 40px 20px;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            color: #000;
+            background-color: #fff;
+            font-size: 16px;
         }
-        .section {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+        .tabs {
+            display: flex;
+            border-bottom: 1px solid #eee;
+            margin-bottom: 2em;
+        }
+        .tab-button {
+            background: none;
+            border: none;
+            padding: 1em 1.5em;
+            cursor: pointer;
+            font-size: 1em;
+            font-weight: 400;
+            color: #000;
+            border-bottom: 2px solid transparent;
+            transition: border-bottom-color 0.3s;
+        }
+        .tab-button.active {
+            border-bottom-color: #000;
+        }
+        .tab-button:hover {
+            border-bottom-color: #ccc;
+        }
+        .tab-content {
+            display: none;
+        }
+        .tab-content.active {
+            display: block;
+        }
+        h1 {
+            font-size: 2.5em;
+            font-weight: 300;
+            margin: 0 0 0.5em 0;
+            text-align: center;
+            letter-spacing: -0.02em;
+        }
+        h2 {
+            font-size: 1.5em;
+            font-weight: 400;
+            margin: 2em 0 1em 0;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 0.5em;
         }
         p {
-            margin: 0.2em 0;
-        }
-        h1, h2 {
-            margin: 0.5em 0 0.3em 0;
+            margin: 0.5em 0;
+            font-size: 1em;
         }
         ul {
-            margin: 0.3em 0;
-            padding-left: 20px;
+            margin: 0.5em 0 1.5em 0;
+            padding-left: 1.5em;
         }
         li {
-            margin: 0.1em 0;
+            margin: 0.3em 0;
         }
         hr {
-            margin: 0.5em 0;
+            margin: 2em 0;
+            border: none;
+            border-top: 1px solid #eee;
+        }
+        a {
+            color: #000;
+            text-decoration: none;
+            border-bottom: 1px solid #000;
+        }
+        a:hover {
+            border-bottom-color: transparent;
+        }
+        @media (max-width: 768px) {
+            body {
+                padding: 20px 10px;
+            }
+            h1 {
+                font-size: 2em;
+            }
+            .tabs {
+                flex-direction: column;
+            }
+            .tab-button {
+                border-bottom: 1px solid #eee;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="section">
-        <h1>T. CHENGAPPA</h1>
-        <hr>
+    <h1>T. CHENGAPPA</h1>
+    <hr>
+
+    <div class="tabs">
+        <button class="tab-button active" onclick="openTab(event, 'about')">About</button>
+        <button class="tab-button" onclick="openTab(event, 'professional')">Professional</button>
+        <button class="tab-button" onclick="openTab(event, 'resources')">Resources</button>
+    </div>
+
+    <div id="about" class="tab-content active">
         <p>Senior Technical Superintendent</p>
         <p>Department of Physics</p>
         <p>IIT Hyderabad</p>
@@ -49,17 +117,19 @@
         <p><strong>Email: </strong><a href="mailto:chengappa.thumisi@phy.iith.ac.in">chengappa.thumisi@phy.iith.ac.in</a></p>
     </div>
 
-    <div class="section">
-        <h2>Research Laboratories:</h2>
+    <div id="professional" class="tab-content">
+        <h2>Research Laboratories</h2>
         <ul>
             <li>Multimodal Scanning probe Microscope</li>
             <li>Ultra High Sensitive MOKE Magnetometer</li>
             <li>Zeta 3D Profilometer</li>
         </ul>
+
         <h2>Employment</h2>
         <ul>
             <li>Senior Technical Superintendent <a href="http://www.iith.ac.in/">IIT Hyderabad</a> (2025-present)</li>
         </ul>
+
         <h2>Education</h2>
         <ul>
             <li>M.Sc. (Physics), Sri Venkateswara University, Tirupati, Andhra Pradesh</li>
@@ -67,7 +137,7 @@
         </ul>
     </div>
 
-    <div class="section">
+    <div id="resources" class="tab-content">
         <h2>Useful Links</h2>
         <ul>
             <li><a href="https://www.physicsclassroom.com/">Physics Classroom</a></li>
@@ -88,5 +158,21 @@
             <li><a href="https://quantumpedia.uk/a-brief-history-of-quantum-computing-e0bbd05893d0">History of Quantum Computing</a></li>
         </ul>
     </div>
+
+    <script>
+        function openTab(evt, tabName) {
+            var i, tabcontent, tabbuttons;
+            tabcontent = document.getElementsByClassName("tab-content");
+            for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].classList.remove("active");
+            }
+            tabbuttons = document.getElementsByClassName("tab-button");
+            for (i = 0; i < tabbuttons.length; i++) {
+                tabbuttons[i].classList.remove("active");
+            }
+            document.getElementById(tabName).classList.add("active");
+            evt.currentTarget.classList.add("active");
+        }
+    </script>
 </body>
 </html>
