--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         <button class="tab-button active" onclick="openTab(event, 'about')">About</button>
         <button class="tab-button" onclick="openTab(event, 'professional')">Professional</button>
         <button class="tab-button" onclick="openTab(event, 'resources')">Resources</button>
+        <button class="tab-button" onclick="openTab(event, 'books')">Books</button>
     </div>
 
     <div id="about" class="tab-content active">
@@ -156,6 +157,19 @@
             <li><a href="https://quantumflytrap.com/virtual-lab/">Virtual Quantum Experiments</a></li>
             <li><a href="https://vanisource.org/wiki/Main_Page/">A.C.Prabhupada Guruji</a></li>
             <li><a href="https://quantumpedia.uk/a-brief-history-of-quantum-computing-e0bbd05893d0">History of Quantum Computing</a></li>
+        </ul>
+    </div>
+
+    <div id="books" class="tab-content">
+        <h2>Recommended Physics Books</h2>
+        <ul>
+            <li>The Feynman Lectures on Physics by Richard P. Feynman, Robert B. Leighton, Matthew Sands</li>
+            <li>Fundamentals of Physics by David Halliday, Robert Resnick, Jearl Walker</li>
+            <li>University Physics with Modern Physics by Hugh D. Young, Roger A. Freedman</li>
+            <li>Conceptual Physics by Paul G. Hewitt</li>
+            <li>Concepts of Physics by H.C. Verma</li>
+            <li>An Introduction to Mechanics by Daniel Kleppner, Robert J. Kolenkow</li>
+            <li>Introduction to Classical Mechanics by David Morin</li>
         </ul>
     </div>
 
