--- a/index.html
+++ b/index.html
@@ -17,25 +17,29 @@
         }
         .tabs {
             display: flex;
-            border-bottom: 1px solid #eee;
+            flex-wrap: wrap;
+            gap: 10px;
             margin-bottom: 2em;
         }
         .tab-button {
-            background: none;
+            background: #f5f5f5;
             border: none;
-            padding: 1em 1.5em;
+            padding: 0.8em 1.5em;
             cursor: pointer;
             font-size: 1em;
             font-weight: 400;
             color: #000;
-            border-bottom: 2px solid transparent;
-            transition: border-bottom-color 0.3s;
-        }
-        .tab-button.active {
-            border-bottom-color: #000;
+            border-radius: 25px;
+            transition: all 0.3s ease;
+            white-space: nowrap;
         }
         .tab-button:hover {
-            border-bottom-color: #ccc;
+            background: #e0e0e0;
+            transform: translateY(-1px);
+        }
+        .tab-button.active {
+            background: #000;
+            color: #fff;
         }
         .tab-content {
             display: none;
@@ -89,10 +93,12 @@
                 font-size: 2em;
             }
             .tabs {
-                flex-direction: column;
+                justify-content: center;
             }
             .tab-button {
-                border-bottom: 1px solid #eee;
+                flex: 1;
+                min-width: 120px;
+                text-align: center;
             }
         }
     </style>
